# record-management-system

./: .gitignore  Cargo.toml  Makefile  README.md  books.csv  main  main.cpp  records.json  records_export.csv  schema.sql
src/: main.rs
task/: README.md
