[package]
name = "task_record_system"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio   = { version = "1.37", features = ["full"] }
sqlx    = { version = "0.8",  features = ["runtime-tokio", "mysql", "macros", "time"] }
dialoguer = "0.11"
anyhow    = "1.0"
csv       = "1.3"
serde     = { version = "1.0", features = ["derive"] }